fix recommendation cards grid to two column on small device

--- a/src/views/Recipe/recipe.module.css
+++ b/src/views/Recipe/recipe.module.css
@@ -35,7 +35,6 @@
     /* Variables declaration */
     --diameter: 145px;
     /* -------------------- */
-    /* background: pink; */
     display: flex;
     flex-direction: column;
     gap: 1rem;
@@ -78,4 +77,15 @@
     font-weight: var(--fw-bold);
     font-size: 1rem;
     text-align: center;
+}
+
+.rec-cards-wrapper{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 1rem;
+}
+@media only screen and (min-width: 992px){
+    .rec-cards-wrapper{
+        grid-template-columns: repeat(1, 1fr);
+    }
 }
